# flash-linear-attention-npu

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  build.sh  gdn-verify.sh  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  close-linked-issues.yml  npu-ci-default-status.yml  repository-rules.yml
chunk_gated_delta_rule/causal_conv1d/op_host/: CMakeLists.txt  causal_conv1d_def.cpp
chunk_gated_delta_rule/chunk_bwd_dqkwg/tests/: chunk_bwd_dqkwg_cpu.py  pta.py  run.sh
chunk_gated_delta_rule/chunk_bwd_dv_local/op_host/: CMakeLists.txt
chunk_gated_delta_rule/chunk_fwd_o/op_host/: chunk_fwd_o_tiling.cpp  chunk_fwd_o_tiling.h
chunk_gated_delta_rule/prepare_wy_repr_bwd_da/op_kernel/: prepare_wy_repr_bwd_da_common.h  prepare_wy_repr_bwd_da_cube.h  prepare_wy_repr_bwd_da_vector.h
chunk_gated_delta_rule/prepare_wy_repr_bwd_da/test/: test_da.py  test_da_all.py
ci/: Dockerfile  example_st_cases.json  prepare_ci_cache.sh  run_checks.sh  run_ci_container.sh  run_example_st_cases.py
ci/9.0.0/: Dockerfile  run_checks.sh  run_ci_container.sh
cmake/: cust_opapi_dlog_stub.cpp  custom_build.cmake  func.cmake
cmake/scripts/custom/: help.info  install.sh
common/include/err/: ops_err.h
common/include/tiling_base/: tiling_base.h
docs/: Fla-npu仓CI部署教程.md  npu-ci-deployment-guide.md  repository-rules.md
docs/agents/: README.md  lessons.md  operator-development.md  torch-npu-decoupled-architecture.md  validation.md
docs/assets/: fla-npu-build-runtime-components.drawio
examples/: flash_gated_delta_rule.py
examples/fast_kernel_launch_example/: CMakeLists.txt
examples/fast_kernel_launch_example/csrc/chunk_bwd_dqkwg/ascend910b/: CMakeLists.txt  chunk_bwd_dqkwg.cpp
examples/fast_kernel_launch_example/csrc/chunk_bwd_dv_local/ascend910b/: chunk_bwd_dv_local.cpp
examples/fast_kernel_launch_example/csrc/chunk_gated_delta_rule_bwd_dhu/ascend910b/: chunk_gated_delta_rule_bwd_dhu.cpp
examples/fast_kernel_launch_example/csrc/chunk_gated_delta_rule_fwd_h/ascend910b/: CMakeLists.txt  chunk_gated_delta_rule_fwd_h.cpp
examples/fast_kernel_launch_example/csrc/prepare_wy_repr_bwd_da/ascend910b/: CMakeLists.txt  prepare_wy_repr_bwd_da.cpp
examples/fast_kernel_launch_example/csrc/recurrent_gated_delta_rule/ascend910b/: CMakeLists.txt  recurrent_gated_delta_rule.cpp
examples/fast_kernel_launch_example/tests/chunk_bwd_dqkwg/: test_chunk_bwd_dqkwg.py
examples/fast_kernel_launch_example/tests/chunk_gated_delta_rule_fwd_h/: test_chunk_gated_delta_rule_fwd_h.py
examples/fast_kernel_launch_example/tests/prepare_wy_repr_bwd_da/: test_prepare_wy_repr_bwd_da.py
examples/fast_kernel_launch_example/tests/recurrent_gated_delta_rule/: test_recurrent_gated_delta_rule.py
fla/ops/ascendc/gdn/gdn_preprocess/causal_conv1d_bwd/: CMakeLists.txt  README.md
fla/ops/ascendc/gdn/gdn_preprocess/causal_conv1d_bwd/docs/: aclnnCausalConv1dBwd.md
fla/ops/ascendc/gdn/gdn_preprocess/causal_conv1d_bwd/examples/: test_aclnn_causal_conv1d_bwd.cpp
fla/ops/ascendc/gdn/gdn_preprocess/causal_conv1d_bwd/op_host/: CMakeLists.txt  causal_conv1d_bwd_def.cpp  causal_conv1d_bwd_tiling.cpp  causal_conv1d_bwd_tiling.h
fla/ops/ascendc/gdn/gdn_preprocess/causal_conv1d_bwd/op_kernel/: causal_conv1d_bwd.cpp  causal_conv1d_bwd.h  causal_conv1d_bwd_input_layout.h  causal_conv1d_bwd_tiling_data.h  causal_conv1d_bwd_tiling_key.h
fla/ops/ascendc/gdn/gdn_preprocess/causal_conv1d_bwd/op_kernel/arch32/: causal_conv1d_bwd_vector.h
fla/ops/ascendc/gdn/gdn_preprocess/causal_conv1d_bwd/tests/ATK/: .gitignore  aclnn_causal_conv1d_bwd.yaml  all_aclnn_causal_conv1d_bwd.json  executor_causal_conv1d_bwd.py  generator_causal_conv1d_bwd.py
fla/ops/ascendc/gdn/gdn_preprocess/chunk_scaled_dot_kkt/: CMakeLists.txt  README.md
fla/ops/ascendc/gdn/gdn_preprocess/chunk_scaled_dot_kkt/docs/: aclnnChunkScaledDotKkt.md
fla/ops/ascendc/gdn/gdn_preprocess/chunk_scaled_dot_kkt/op_host/: CMakeLists.txt  chunk_scaled_dot_kkt_def.cpp  chunk_scaled_dot_kkt_infershape.cpp  chunk_scaled_dot_kkt_tiling.cpp  chunk_scaled_dot_kkt_tiling.h
fla/ops/ascendc/gdn/gdn_preprocess/chunk_scaled_dot_kkt/op_kernel/: chunk_scaled_dot_kkt.cpp  chunk_scaled_dot_kkt.h
fla/ops/ascendc/gdn/gdn_preprocess/chunk_scaled_dot_kkt/test/: test.py
fla/ops/ascendc/kda/kda_gate_cumsum/: CMakeLists.txt
fla/ops/ascendc/kda/kda_gate_cumsum/op_host/: CMakeLists.txt  kda_gate_cumsum_def.cpp  kda_gate_cumsum_tiling.cpp  kda_gate_cumsum_tiling.h
fla/ops/ascendc/kda/kda_gate_cumsum/op_host/op_api/: aclnn_kda_gate_cumsum.cpp  aclnn_kda_gate_cumsum.h  kda_gate_cumsum.cpp  kda_gate_cumsum.h
fla/ops/ascendc/kda/kda_gate_cumsum/op_kernel/: kda_gate_cumsum.cpp
scripts/: check_npu_env.py  check_packaged_wheel_api.py  collect_public_env.py  fla_npu_artifacts.py
scripts/github/: apply_branch_protection.sh
tests/reference/: chunk_kda_reference.py
torch_custom/aclnn_extension/: npu_custom.yaml
torch_custom/aclnn_extension/test/: test_fwd_o.py  test_npu_chunk_bwd_dqkwg.py  test_npu_prepare_wy_repr_bwd_da.py
torch_custom/fla_npu/: README.md  build.sh  npu_custom.yaml  setup.py
torch_custom/fla_npu/fla_npu/: __init__.py  install_opp.py  kda.py
torch_custom/fla_npu/test/: check_prepare_wy_repr_bwd_golden_parity.py  compare_prepare_wy_repr_bwd_fused_vs_split.py  diagnose_npu_chunk_kda_cu_seqlens.py  run_bwd_dhu_gva_cases.sh  test.sh  test_ascendc_mutation_contract.py  test_bwd_dhu.py  test_fwd_h.py  test_fwd_o.py  test_npu_bwd_dhu_gva.py  test_npu_causal_conv1d.py  test_npu_causal_conv1d_bwd.py  test_npu_chunk_bwd_dqkwg.py  test_npu_chunk_bwd_dv_local.py  test_npu_chunk_gated_delta_rule_bwd_dhu.py  test_npu_chunk_kda.py  test_npu_chunk_local_cumsum.py  test_npu_chunk_scaled_dot_kkt.py  test_npu_chunk_scaled_dot_kkt_dump.py  test_npu_fast_gelu_custom.py  test_npu_fwd_o_generalization.py  test_npu_prepare_wy_repr_bwd.py  test_npu_prepare_wy_repr_bwd_da.py  test_npu_prepare_wy_repr_bwd_full.py  test_npu_recompute_w_u_fwd.py  (+4 more)
(+201 files in other folders)
